# git_learn

./: .gitignore  build_openssl
4G/: 4g-ppp.sh  4g.sh  quectel-CM
4G/6118_4g/: 4g.sh  (+1 more)
6118_root/: checkProcess.sh  delect.sh  empty_deal.sh  fw6118_init.sh  mmc_deal.sh  occupy_check.sh  watchdog.sh  watchdogRegist.sh
about_nfs/: ipconfig.sh  nfs_client.sh  nfs_host.sh  note-nfs-mount
about_wifi/: nat_note.txt  note.txt  speedtest.py
ble/: ble_init.sh  bluez_le_init.sh  btgatt-server  readme
bluetooth/: ReadME  SPP-loopback.py  bluez_init.sh
bluetooth/bluetooth_proxy/: CMakeLists.txt  bluetooth_proxy.c
bluetooth/bluetooth_proxy/fifo/: CMakeLists.txt  app_fifo.c
bluetooth/bluetooth_proxy/recv_test/: CMakeLists.txt  bt_recv_simple.c
bluetooth/bluetooth_proxy/send_test/: CMakeLists.txt  bt_send_simple.c
build_img/: build_img.sh  change_type.sh  copy-mt.sh  copy-wb.sh  creat.sh  empty_deal.sh  m20_build_img.sh  make-system.sh  merge.sh  update_time.sh
keyboard_kernel/: Kconfig  Makefile  io_keyboard.c  io_keyboard.ko  modules.order
linux_download/: 2.uboot编译烧写.txt  3.linux内核 rootfs编译烧写.txt  4.应用程序测试.txt
qbox10_kernel/: config_bak_190708
qbox10_root/: .sh (复件)  alsa_check.sh  ftp_upgrade.sh  node_websocket.sh  py_http.sh  py_kill.sh  py_server.sh  py_signalr.sh  py_signalr_check.sh  py_websocket.sh  qbox_start.sh  readme  rmmod_usb.sh  usrinit.rc  watch_dog_close.sh  watch_dog_run.sh  wifi_ap.sh  wifi_connect.sh  wifi_deal.sh  wifi_nat.sh  wifi_start.sh  wifi_stop.sh  wl18xx_init.sh  wl18xx_rmmod.sh
shell/: build_img.sh  nfs.sh  shell.sh  update.sh
(+80 files in other folders)
